fix font, spacing, result page

--- a/app/globals.css
+++ b/app/globals.css
@@ -4,13 +4,13 @@
 
 @font-face {
   font-family: 'NexonKart';
-  src: url('/fonts/NEXON Kart Gothic Kor Medium.ttf') format('truetype');
-  font-weight: 400;
+  src: url('/fonts/NEXON Kart Gothic Kor Bold.ttf') format('truetype');
+  font-weight: 700;
 }
 
 input, textarea, select {
   font-family: var(--font-anton), 'NexonKart', sans-serif;
-  font-weight: bold;
+  font-weight: 700;
 }
 
 .responsive-grid {
